# Token

./: Anchor.toml  package-lock.json  package.json
programs/token/: Cargo.toml
programs/token/src/: lib.rs
setup/: randomness_queue.json
tests/: token.ts
